# scene_decompose

./: .gitignore  MANIFEST.in  README.md  distill_wrapper.py  distill_wrapper_openclip.py  pyproject.toml  setup.py
header/: ade20k_loader.py
hierachical_gs/: main.py  splatCondenseNet.py  splatNet.py
hierachical_gs/splatLayer/: cov2scale_quat.py  splat_self_attention.py
hierachical_gs/tree/: pca_tree.py  tree.py
scene_decompose/: .gitignore  README.md  __init__.py  argparser.py  construct_hierachical_gs.py  distill_wrapper.py  eval.yml  eval_wrapper.py  fix_trainer.py  general_viewer.py  hierachical_viewer.py  pipeline.py
scene_decompose/configs/: eval_3dgs.yml  eval_h_gs.yml
scene_decompose/general_wrapper/: __init__.py  feature_extractor.py  gs_viewer_wrapper.py  image_dashboard.py  query_data.py  utils.py
scene_decompose/header/: __init__.py  classifier.py  labeling.py
scene_decompose/hierachical_gs/: __init__.py  splatNet.py
scene_decompose/hierachical_gs/splatLayer/: __init__.py  gaussian_moment_matching.py  splat_image_attention.py  splat_self_attention.py
scene_decompose/hierachical_gs/splat_affinity_transformer/: README.md  SAT.py
scene_decompose/hierachical_gs/tree/: __init__.py  pca_tree.py  tree.py
scene_decompose/hierachical_utils/: __init__.py  hierachical_primitive.py  hierachical_viewer.py  image_dashboard.py  pca_utils.py
scene_decompose/query_system/: __init__.py  database.py  querySystem.py
scene_decompose/train/: gsplat_viewer.py
